syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "ActivityChargeRankProto";

package activityChargeRank;


enum RequestType{
	ChargeRank = 1;		//充值排行榜
	ConsumeRank = 2;	//消费排行榜
}

message ActivityCommonReqMsg{
	required RequestType reqType = 1;//请求功能协议类型
	optional int32 fromRank = 2;	//请求排行榜时的初始排名
	optional int32 toRank = 3;	//请求排行榜时的结束排名
}

message ActivityCommonRspMsg{
	required RequestType reqType = 1;//请求功能协议类型
	required bool isSuccess = 2;//是否成功处理
	optional string tipMsg = 3;//提示消息，可以是成功，也可以是失败的提示消息
	optional int32 selfRank = 4;
	repeated RankItem items = 5;
}

message RankItem{
	required string userId = 1;
	required string userName = 2;
	required int32 count = 3;
}